CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The IPP backend now detects if the destination queue
	  has gone away and reports an error.
	- The scheduler now allocates its select() sets to
	  support larger numbers of clients on systems that
	  support it.
	- The scheduler now sets the CFProcessPath environment
	  variable under MacOS X.
	- The cupsLangDefault() function now uses the
	  CoreFoundation localization API under MacOS X.
	- The httpSeparate() function didn't handle file URIs of
	  the form "file:///path" properly.
	- The lpadmin command now supports a "protocol" option
	  for specifying the binary communications protocol to
	  use when printing binary PostScript data.
	- The scheduler did not properly parse the SystemGroup
	  directive, so only the first group would be used.
	- Revamped how strings are stored in the scheduler,
	  providing a substantial improvement in memory usage
	  for systems with large numbers of printers.
	- The PostScript filter now supports binary PostScript
	  files and files beginning with the PJL language escape
	  sequence.
	- The PPD API now provides additional information from
	  the PPD file.
	- The USB backend didn't compile on Solaris Intel.
	- The cupstestppd utility now supports the "-q" option
	  (quiet) for use in scripts, etc.
	- Merged several weight-reducing changes into the CUPS
	  baseline donated by Apple.
	- Added preliminary support for CDSA; patch provided by
	  Apple.
	- Implicit classes are now created from identical
	  printer classes on the network.
	- The lp command now supports a "-H restart" option to
	  restart previously printed jobs.  This functionality
	  only works if you have enabled the PreserveJobFiles
	  option.
	- The scheduler now supports URIs in HTTP request lines
	  to conform to the HTTP/1.1 specification.
	- The time-at-xyz attributes were not recognized in
	  banner files if prefixed by a question mark, e.g.
	  "{?time-at-creation}".