@@ -3,6 +3,10 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- The scheduler no longer accepts rangeOfInteger values
+	  that are out of order (e.g. 5-1)
+	- The sides attribute was incorrectly sent as a name
+	  value; it is a keyword value.
 	- The IPP backend now detects if the destination queue
 	  has gone away and reports an error.
 	- The scheduler now allocates its select() sets to
